--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Welcome to the User App</h1>
+    <h1>Welcome!</h1>
     <p><a href="{{ url_for('login') }}">Login</a></p>
     <p><a href="{{ url_for('signup') }}">Sign Up</a></p>
 </body>
